--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <header class="header">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="logo" src="./img/vf.jpg" alt=""></a>
+                    <a class="navbar-brand" href="#"><img class="logo" src="./img/vf.jpg" alt="logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -75,7 +75,7 @@
             
             <div>
 
-                <img src="./img/yo.jpg" alt="">
+                <img src="./img/yo.jpg" alt="yo">
             </div>
 
             <div>
@@ -83,10 +83,10 @@
 
                 <p>Hola! me llamo Ayelen Salvia, soy profe de Educación física y kinesióloga.
                     Desde chica siempre me gustó moverme y treparme a todo como un monito 😂 .Hice gimnasia artística
-                    y nacío mi pasión por ser profe y entrenadora, por lo cual decidí hacer el profesorado de
+                    y así comenzó mi pasión por ser profe y entrenadora, por lo cual decidí hacer el profesorado de
                     educación física.
-                    Siempre me gusto el estudio del cuerpo humano,  al empezar el profesorado aun más, así
-                    fue que luego de terminarlo, empecé a estudiar kinesiología en la UBA.
+                    Siempre me gustó el estudio del cuerpo humano,  al empezar el profesorado aun más,
+                    luego de terminarlo, empecé a estudiar kinesiología en la UBA.
                     Desde ese momento siempre intenté combinar ambas profesiones, dando clases y cuidando la salud de
                     mis alumnos , así nació VITALITY!! .</p>
 
