--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,7 +24,7 @@
         <header class="header">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="logo" src="../img/vf.jpg" alt=""></a>
+                    <a class="navbar-brand" href="#"><img class="logo" src="../img/vf.jpg" alt="logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -111,7 +111,7 @@
             </div>
 
             <div>
-                <p>Derechos de autor.Ayelen salvia</p>
+                <p>Derechos de autor.Ayelen Salvia</p>
             </div>
 
 
