--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -24,7 +24,7 @@
         <header class="header">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="logo" src="../img/vf.jpg" alt=""></a>
+                    <a class="navbar-brand" href="#"><img class="logo" src="../img/vf.jpg" alt="logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -73,19 +73,19 @@
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" >
-                            <img src="../img/c1.jpg" class="d-block w-100" alt="...">
+                            <img src="../img/c1.jpg" class="d-block w-100" alt="ejercicio1">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/c2.jpg" class="d-block w-100" alt="...">
+                            <img src="../img/c2.jpg" class="d-block w-100" alt="ejercicio2">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/c3.jpg" class="d-block w-100" alt="...">
+                            <img src="../img/c3.jpg" class="d-block w-100" alt="ejercicio3">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/c4.jpg" class="d-block w-100" alt="...">
+                            <img src="../img/c4.jpg" class="d-block w-100" alt="ejercicio4">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/c6.jpg" class="d-block w-100" alt="...">
+                            <img src="../img/c6.jpg" class="d-block w-100" alt="ejercicio5">
                         </div>
                         
                     </div>
@@ -127,7 +127,7 @@
             </div>
 
             <div>
-                <p>Derechos de autor.Ayelen salvia</p>
+                <p>Derechos de autor.Ayelen Salvia</p>
             </div>
 
 
